# python-ros-engine

./: .gitattributes  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  build_docs.py  format_code.py  implementation_plan.md  index.html  mkdocs.yml  project_description.md  project_structure.md  pyproject.toml  requirements.txt  ros2_concepts_summary.md  search.html  setup.cfg  setup.py  test_basic_functionality.py  test_comprehensive.py  test_launch_system.py
.github/workflows/: ci.yml  deploy.yml  docs-deploy.yml  docs.yml  mkdocs.yml
.qwen/: PROJECT_SUMMARY.md  setting.json
api/: index.html
bridging/: index.html
config/: __init__.py  config.yaml  hydra_config.py
contributing/: index.html
docs/: .gitattributes  __init__.py  api.md  bridging.md  contributing.md  custom.css  diagrams.md  examples.md  index.md  installation.md  launch.md  license.md  usage.md
docs/.claude/: settings.local.json
docs/css/: custom.css
docs/javascripts/: mermaid.js
docs/templates/: main.html
example_project/: README.md
example_project/config/: __init__.py  config.yaml  robot_config.yaml
example_project/launch/: __init__.py  robot_system.py
example_project/nodes/: __init__.py  client_node.py  publisher_node.py  service_node.py  subscriber_node.py
examples/: __init__.py  bridge_example.py  client_example.py  index.html  launch_example.py  launch_system_example.py  publisher_example.py  service_example.py  subscriber_example.py
hooks/: copy_gitattributes.py
installation/: index.html
launch/: index.html
license/: index.html
search/: search_index.json
src/pyros2/: __init__.py  bridge.py  client.py  discovery.py  exceptions.py  launch.py  launch_cli.py  message.py  message_translator.py  node.py  publisher.py  qos.py  service.py  subscriber.py  timer.py
tests/: __init__.py  test_additional_messages.py  test_bridge.py  test_config.py  test_discovery.py  test_launch.py  test_message.py  test_message_translator.py  test_node.py  test_parameter.py  test_publisher_subscriber.py  test_qos.py  test_service_client.py
usage/: index.html
