[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ros-engine"
description = "A pure Python implementation of ROS2 functionality with bridging capabilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python ROS Engine Team", email = "pyros@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "hydra-core>=1.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.14.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.14.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/python-ros-engine"
Repository = "https://github.com/your-username/python-ros-engine"

[tool.setuptools_scm]
write_to = "src/pyros2/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"