[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ros-engine"
description = "A pure Python implementation of ROS2 functionality with bridging capabilities"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Python ROS Engine Team", email = "pyros@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "hydra-core>=1.0.0",
]
version = "0.1.1"

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.14.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.14.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/yhbcode000/python-ros-engine"
Repository = "https://github.com/yhbcode000/python-ros-engine"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]